# sci-template

./: README.md  environment-noncuda.yml  environment.yml  globals.py  license.txt  setup.cfg  setup.py
preprocessing/: duplicate.py
src/constants/: globals.py
src/data/: loader.py
src/preprocessing/: convert.py
src/tools/constants/: globals.py
src/tools/pipelines/: training.py
src/tools/preprocessing/image/: convert.py  duplicate.py
tools/pipelines/: validate.py
utils/: file.py
