[metadata]
name = sci-template
version = 1.0
author = Zherish Galvin Mayordo
author_email = zherishatbusiness@gmail.com
description = This is a template repository tailored for data scientists, beginners or pros.
keywords = template, data science, machine learning, deep learning, tensorflow
classifiers = 
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
python_requires = <= 3.11
packages = find:
package_dir =
    = src

[options.packages.find]
where=src
exclude =
    docs*
    examples*
    tests*
    examples/notebooks*
    tests/notebooks*
    examples/notebooks/data*
