[metadata]
name = sci-tools
version = 1.0
author = Zherish Galvin Mayordo
author_email = zherishatbusiness@gmail.com
license = "MIT License"
description = This is a template repository tailored for data scientists, beginners or pros.
keywords = template, data science, machine learning, deep learning, tensorflow
classifiers = 
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
python_requires = <= 3.11
packages = find:
package_dir =
    = src/tools

[options.packages.find]
where=src/tools
exclude =
    docs*
    examples*
    tests*
    examples/notebooks*
    tests/notebooks*
    examples/notebooks/data*
